--- a/style.css
+++ b/style.css
@@ -1,3 +1,179 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: white;
+}
+
+body li {
+    list-style: none;
+}
+
+nav {
+    height: 215px;
+    width: 100vw;
+    border-bottom: .5px solid rgb(45, 45, 48);
     background-color: rgb(24 24 26);
+}
+
+.div1 {
+    width: 77%;
+    height: 100%;
+    margin: auto;
+}
+
+nav ul {
+    display: flex;
+    gap: 5px;
+}
+
+nav .upper ul li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+}
+
+nav .upper ul li:last-child {
+    transform: rotate(45deg);
+}
+
+
+nav ul li:hover {
+    cursor: pointer;
+    background-color: rgb(67 67 69);
+}
+
+i {
+    font-size: 18px;
+    color: #d4d4d8;
+}
+
+
+
+.upper {
+    display: flex;
+    height: 70%;
+    padding-top: 30px;
+    justify-content: space-between;
+}
+
+.left {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+}
+
+.left .username {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 800;
+    font-size: 24px;
+}
+
+.right {
+    width: 50%;
+    text-align: end;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.righticons {
+    display: flex;
+    justify-content: right;
+
+}
+
+#profilePic {
+    background-color: aquamarine;
+}
+
+#profilePic i {
+    color: black;
+}
+
+.inbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 40px;
+    border: 1px solid white;
+    border-radius: 50px;
+}
+
+.inbox:hover {
+    cursor: pointer;
+    background-color: rgb(67 67 69);
+}
+
+.followmsg {
+    display: flex;
+    justify-content: right;
+    gap: 13px;
+}
+
+#follow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: blue;
+    background-color: #fff;
+    outline: none;
+    font-size: 14px;
+    padding: 7px 12px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+#follow i {
+    color: blue;
+}
+
+
+
+/* div2 */
+.div2 {
+    height: 25%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 13px;
+}
+
+
+.div2 ul li {
+    /* background-color: aquamarine; */
+    font-family: sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    margin: 13px;
+    padding: 5px 9px;
+    border-radius: 8px;
+    color: #d4d4d8;
+}
+
+
+
+
+
+
+
+
+
+
+
+.body {
+    background-color: rgb(17 17 19);
+    height: 700px;
+    width: 100%;
 }
