fix stylesheet error

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 * {
@@ -177,7 +176,7 @@ i {
     background-color: rgb(17 17 19);
     height: 700px;
     width: 100%;
-
+}
 
 
 
@@ -189,19 +188,20 @@ i {
 
 
 /* footer */
-footer{
+footer {
     display: flex;
     justify-content: center;
     border-top: 1px solid rgb(63 63 70);
-      
+
     position: absolute;
     bottom: 0px;
     width: 100vw;
-    
-}
-.outer{
 
-    
+}
+
+.outer {
+
+
     color: rgb(161 161 170);
     background-color: rgb(17 17 19);
     box-sizing: border-box;
@@ -212,73 +212,88 @@ footer{
     padding-top: 3rem;
     /* border: 2px solid white; */
     /* padding-top: 2rem; */
-    
-   
-    
-   
-    
+
+
+
+
+
 
 }
 
-.div1{
+.div1 {
     display: flex;
     justify-content: space-between;
     font-size: 1rem;
 }
-.div2{
+
+.div2 {
     display: flex;
     justify-content: center;
     gap: 0.3rem;
- 
-}
-.div3a, .div3b, .div3c{
-    display: flex;
-    justify-content: center;
-    
 
 }
-.div3b, .div3c{
+
+.div3a,
+.div3b,
+.div3c {
+    display: flex;
+    justify-content: center;
+
+
+}
+
+.div3b,
+.div3c {
     margin-top: 1.2rem;
 }
-.div3a{
-    font-size:2rem ;
+
+.div3a {
+    font-size: 2rem;
     margin-top: 1rem;
 }
-.div3a i:hover{
+
+.div3a i:hover {
     color: white;
 }
-.div3c{
+
+.div3c {
     gap: 0.5rem;
     margin-bottom: 2rem;
 }
 
-.star{
+.star {
     filter: invert(75%);
     height: 0.8rem;
 }
-.div1, .div2, .div3{
+
+.div1,
+.div2,
+.div3 {
     width: 100%;
 }
-.btn{
-    background-color: rgba(0,0,0,0);
+
+.btn {
+    background-color: rgba(0, 0, 0, 0);
     color: rgb(161 161 170);
     padding: 8px;
     border: 0.8px solid rgb(63 63 70);
     border-radius: 10px;
-    padding-left: 15px ;
+    padding-left: 15px;
     padding-right: 15px;
 }
-.btn:hover{
+
+.btn:hover {
     background-color: rgb(39 39 42);
 }
-.navigators:hover{
+
+.navigators:hover {
     color: rgb(59 130 246);
 
 }
 
 
 /* utility */
-.font-sans{
+.font-sans {
     font-family: sans-serif;
 
 }
